<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:padding="8dp"
    tools:context=".MessageEncryptionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelRecipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_recipient" />

            <EditText
                android:id="@+id/recipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hint_recipient_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/labelMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_message_to_decrypt" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_message_to_be_decrypted"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:minLines="1" />

            <Button
                android:id="@+id/decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:text="@string/btn_decrypt" />

            <TextView
                android:id="@+id/labelEncryptedSecret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_decoded_message" />

            <EditText
                android:id="@+id/decodedMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/label_decoded_message"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:minLines="1" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>